--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <title>Hyper Uniformes - Início</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="webpage icon" href="/img/logo-hyper.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 </head>
 
 <body>
@@ -173,12 +175,14 @@
             </div>
 
             <div class="topic-item">
-              <img width="40" height="40" src="https://img.icons8.com/forma-thin-sharp/24/ffffff/visible.png" alt="visible" />
+              <img width="40" height="40" src="https://img.icons8.com/forma-thin-sharp/24/ffffff/visible.png"
+                alt="visible" />
               <p>Visualização</p>
             </div>
 
             <div class="topic-item">
-              <img width="40" height="40" src="https://img.icons8.com/ios/50/ffffff/speedometer.png" alt="speedometer" />
+              <img width="40" height="40" src="https://img.icons8.com/ios/50/ffffff/speedometer.png"
+                alt="speedometer" />
               <p>Otimização</p>
             </div>
 
@@ -186,16 +190,157 @@
           </div>
 
           <button class="btn-simulador" onclick="window.open('https://www.hyperuniformes.com/simulador/', '_blank')">
-              <div class="content-btn">
-                <p>Acessar simulador</p>
-                <img src="/img/Arrow.png" alt="seta btn">
-              </div>
-            </button>
+            <div class="content-btn">
+              <p>Acessar simulador</p>
+              <img src="/img/Arrow.png" alt="seta btn">
+            </div>
+          </button>
         </div>
 
         <div class="mockup-laptop">
           <img class="img-laptop" src="/img/laptop-mockup.png" alt="laptop simulador">
-          <img class="img-pilar"  src="/img/pilar-simulador.png" alt="">
+          <img class="img-pilar" src="/img/pilar-simulador.png" alt="">
+        </div>
+      </section>
+
+      <section class="container-feedbacks">
+
+        <div class="titulo-sec">
+          <h1>QUEM USA HYPER, RECOMENDA</h1>
+          <p>A confiança na Hyper Uniformes é construída em cada entrega, do tecido ao acabamento final.
+            Clientes reais compartilham experiências que comprovam nosso compromisso com qualidade e durabilidade.</p>
+        </div>
+
+
+        <div class="swiper mySwiper carrossel-feedbacks">
+          <div class="swiper-wrapper">
+
+
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/familia-feliz.avif" alt="familia feliz">
+                <h1>Larissa Alexandre</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+
+
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/homem-batata.jpg"
+                  alt=" homem comendo batata">
+                <h1>Hugo Souza</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+
+
+            <div class="card-depoimento swiper-slide">
+
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/mulher-laranja.jpg"
+                  alt=" mulher fundo laranja">
+                <h1>Ana luiza</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/japa-kiwi.png" alt=" japa kiwi">
+                <h1>Japa Kiwi</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/mulher-sorrindo.jpg"
+                  alt=" mulher sorrindo">
+                <h1>Olivia Alexandre</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/mulher-tranquila.webp"
+                  alt=" mulher tranquila">
+                <h1>Yara Sanches</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/mulher-tranquila.webp"
+                  alt=" mulher tranquila">
+                <h1>Yara Sanches</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/mulher-tranquila.webp"
+                  alt=" mulher tranquila">
+                <h1>Yara Sanches</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+            <div class="card-depoimento swiper-slide">
+              <div class="infos-depoimento">
+                <img class="img-pessoa" src="/assets/img/pessoas-depoimentos/mulher-tranquila.webp"
+                  alt=" mulher tranquila">
+                <h1>Yara Sanches</h1>
+                <img class="aspas" src="/img/aspas.png" alt="aspas">
+              </div>
+              <p class="txt-depoimento">
+                A Pop Fries virou meu lugar favorito pra matar a fome! As batatas são sempre crocantes e bem temperadas.
+                O atendimento é rápido e o ambiente é super descontraído. Recomendo pra todo mundo que curte
+                um lanche de qualidade!
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -220,6 +365,8 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollSmoother.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
   <script src="/src/script.js"></script>
 </body>
 
