--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Hyper Uniformes - Início</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="webpage icon" href="/img/logo-hyper.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 </head>
 
@@ -344,6 +344,60 @@
         </div>
       </section>
 
+      <footer>
+
+        <div class="geral_footer">
+
+          <img class="logo_footer" src="/img/logo-hyper.png" alt="logo-hyper">
+
+          <div class="links_footer">
+            <span class="title-footer"><b>LINKS RÁPIDOS</b></span>
+            <a href="/usuario/index.php">INÍCIO</a>
+            <a href="/usuario/cardapio.php">CARDÁPIO</a>
+            <a href="/usuario/sobre-nos.php">SOBRE NÓS</a>
+            <a href="/usuario/compras.php">PEDIDOS</a>
+          </div>
+
+          <div class="col2">
+            <div class="contato_footer">
+              <span class="title-footer"><b>CONTATO</b></span>
+              <p>TEL : (00) 99999-9999</p>
+              <p>CEL : (00) 99999-9999</p>
+            </div>
+            <div class="redes_footer">
+              <span class="title-footer"><b>REDES SOCIAIS</b></span>
+              <div class="imgs-redes">
+                <img width="32" height="32" src="https://img.icons8.com/windows/32/instagram-new.png"
+                  alt="instagram-new" />
+                <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/facebook-new.png"
+                  alt="facebook-new" /> <img src="/assets/img/imgs-footer/facebook-footer.png" alt="">
+              </div>
+            </div>
+
+          </div>
+
+
+          <div class="col3">
+
+            <div class="horarios_footer">
+              <span class="title-footer"><b>HORÁRIO DE FUNCIONAMENTO:</b></span>
+              <p>SEGUNDA A SEXTA: 11h00 – 22h30 </p>
+              <p>SÁBADO: 11h00 – 23h00 </p>
+              <p>DOMINGO: 15h00 – 21h00 </p>
+            </div>
+            <div class="local_footer">
+              <span class="title-footer"><b>LOCAL</b></span>
+              <p>RUA GENERAL OSÓRIO, 287 — CENTRO — JABOTICABAL, SP — CEP 14870-200</p>
+            </div>
+          </div>
+
+        </div>
+
+
+        <span class="cpy">Copyright © 2025 - Pop Fries</span>
+      </footer>
+
+
 
     </div>
   </div>
@@ -365,7 +419,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollSmoother.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <script src="/src/script.js"></script>
 </body>
