--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     <div id="smooth-content">
       <!-- todo o conteudo da pagina esta aqui nessa div -->
 
-      <section class="container-hero">
+      <section id="hero"  class="container-hero">
         <h1 class="headline">ALTA PERFORMANCE</h1>
 
         <div class="main-hero">
@@ -344,6 +344,86 @@
         </div>
       </section>
 
+      <section class="container-faq">
+          <h1>AINDA RESTA DÚVIDAS? NÓS TEMOS AS REPOSTAS</h1>
+
+          <div class="accordions-faq">
+
+            <div class="accordion">
+
+              <button class="pergunta-accordion">
+                <p>Qual o prazo de entrega dos produtos?</p>
+                <span class="icon-open">+</span>
+              </button>
+
+              <div class="resposta-accordion">
+                <p>O prazo varia de acordo com a quantidade e complexidade do pedido, mas geralmente trabalhamos com prazos 
+                  de 15 a 30 dias úteis. Para pedidos urgentes, consulte nossa equipe sobre possibilidades de entrega expressa.</p>
+              </div>
+            </div>
+            
+            <div class="accordion">
+
+              <button class="pergunta-accordion">
+                <p>Qual o prazo de entrega dos produtos?</p>
+                <span class="icon-open">+</span>
+              </button>
+
+              <div class="resposta-accordion">
+                <p>O prazo varia de acordo com a quantidade e complexidade do pedido, mas geralmente trabalhamos com prazos 
+                  de 15 a 30 dias úteis. Para pedidos urgentes, consulte nossa equipe sobre possibilidades de entrega expressa.</p>
+              </div>
+            </div>
+
+            <div class="accordion">
+
+              <button class="pergunta-accordion">
+                <p>Qual o prazo de entrega dos produtos?</p>
+                <span class="icon-open">+</span>
+              </button>
+
+              <div class="resposta-accordion">
+                <p>O prazo varia de acordo com a quantidade e complexidade do pedido, mas geralmente trabalhamos com prazos 
+                  de 15 a 30 dias úteis. Para pedidos urgentes, consulte nossa equipe sobre possibilidades de entrega expressa.</p>
+              </div>
+            </div>
+
+            
+            <div class="accordion">
+
+              <button class="pergunta-accordion">
+                <p>Qual o prazo de entrega dos produtos?</p>
+                <span class="icon-open">+</span>
+              </button>
+
+              <div class="resposta-accordion">
+                <p>O prazo varia de acordo com a quantidade e complexidade do pedido, mas geralmente trabalhamos com prazos 
+                  de 15 a 30 dias úteis. Para pedidos urgentes, consulte nossa equipe sobre possibilidades de entrega expressa.</p>
+              </div>
+            </div>
+
+            <div class="accordion">
+
+              <button class="pergunta-accordion">
+                <p>Qual o prazo de entrega dos produtos?</p>
+                <span class="icon-open">+</span>
+              </button>
+
+              <div class="resposta-accordion">
+                <p>O prazo varia de acordo com a quantidade e complexidade do pedido, mas geralmente trabalhamos com prazos 
+                  de 15 a 30 dias úteis. Para pedidos urgentes, consulte nossa equipe sobre possibilidades de entrega expressa.</p>
+              </div>
+            </div>
+
+
+          </div>
+      </section>
+
+
+      <a href="#hero" class="seta-subir">
+        <img src="/img/setas-para-cima.png" alt="dupla seta">
+      </a>
+
       <footer>
 
         <div class="geral_footer">
@@ -361,16 +441,16 @@
           <div class="col2">
             <div class="contato_footer">
               <span class="title-footer"><b>CONTATO</b></span>
-              <p>TEL : (00) 99999-9999</p>
-              <p>CEL : (00) 99999-9999</p>
+              <p>TEL : (16) 99737-6942</p>
+              <!-- <p>CEL : (00) 99999-9999</p> -->
             </div>
             <div class="redes_footer">
               <span class="title-footer"><b>REDES SOCIAIS</b></span>
               <div class="imgs-redes">
-                <img width="32" height="32" src="https://img.icons8.com/windows/32/instagram-new.png"
-                  alt="instagram-new" />
-                <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/facebook-new.png"
+              <img onclick="window.open('https://www.instagram.com/hyperuniformes?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==')" title="Instagram" width="33" height="30" src="https://img.icons8.com/fluency-systems-regular/48/ffffff/instagram-new--v1.png" alt="instagram-new--v1"/>
+                <img onclick="window.open('https://www.facebook.com/hyperuniformes')" title="Facebook" width="35" height="30" src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png"
                   alt="facebook-new" /> <img src="/assets/img/imgs-footer/facebook-footer.png" alt="">
+                  <img onclick="window.open('https://api.whatsapp.com/send?phone=5516997376942', '_blank')"  title="Whatsapp" width="35" height="30" src="https://img.icons8.com/material-outlined/24/ffffff/whatsapp--v1.png" alt="whatsapp--v1"/>
               </div>
             </div>
 
@@ -381,20 +461,20 @@
 
             <div class="horarios_footer">
               <span class="title-footer"><b>HORÁRIO DE FUNCIONAMENTO:</b></span>
-              <p>SEGUNDA A SEXTA: 11h00 – 22h30 </p>
-              <p>SÁBADO: 11h00 – 23h00 </p>
-              <p>DOMINGO: 15h00 – 21h00 </p>
+              <p>SEGUNDA A SEXTA: 08h00 – 18:00 </p>
+              <p>SÁBADO: FECHADO </p>
+              <p>DOMINGO: FECHADO </p>
             </div>
             <div class="local_footer">
               <span class="title-footer"><b>LOCAL</b></span>
-              <p>RUA GENERAL OSÓRIO, 287 — CENTRO — JABOTICABAL, SP — CEP 14870-200</p>
+              <p>R. Joaquim Antônio P Cunha, 45 - Sorocabano, Jaboticabal - SP, 14871-050</p>
             </div>
           </div>
 
         </div>
 
 
-        <span class="cpy">Copyright © 2025 - Pop Fries</span>
+        <span class="cpy">Copyright © 2026 - Hyper Uniformes</span>
       </footer>
 
 
@@ -412,7 +492,7 @@
 
     <img class="logo" src="/img/logo-hyper.png" alt="logo hyper uniformes">
 
-    <button class="btn-header">Solicitar proposta</button>
+    <button onclick="window.open('https://api.whatsapp.com/send?phone=5516997376942', '_blank')" class="btn-header">Solicitar proposta</button>
   </header>
 
 
