inicio sec servicos

--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,50 @@
         </div>
       </section>
 
+      <section class="container-servicos">
+        <div class="titulo-sec">
+          <h1>NOSSOS SERVIÇOS</h1>
+          <p>Oferecemos soluções completas em uniformes personalizados, desde o design até a entrega final. Nossa
+            expertise abrange criação, produção e personalização, garantindo qualidade e identidade visual alinhadas às
+            necessidades de cada cliente.</p>
+        </div>
+
+        <div class="cards-servicos">
+          
+          <div class="item-servicos">
+            <img src="/img/servicos/uniformes.png" alt="img uniformes">
+            <p>Uniformes</p>
+          </div>
+
+
+          <div class="item-servicos">
+            <img src="/img/servicos/abadas.jpg" alt="img abadas">
+            <p>Abadas</p>
+          </div>
+
+
+          <div class="item-servicos">
+            <img src="/img/servicos/bandeiras.png" alt="img bandeiras">
+            <p>Bandeiras</p>
+          </div>
+
+
+          <div class="item-servicos">
+            <img src="/img/servicos/estampas.png" alt="img estampas">
+            <p>Estampas</p>
+          </div>
+
+          <div class="item-servicos">
+            <img src="/img/servicos/moletons.png" alt="img moletons">
+            <p>Moletons</p>
+          </div>
+
+
+        </div>
+      </section>
+
+        
+
       <section class="brake-frases">
         <p>Alta Performance</p>
         <p>Precisão Têxtil </p>
@@ -418,6 +462,14 @@
 
           </div>
       </section>
+
+<form action="https://formsubmit.co/brenolufy10@gmail.com" method="POST">
+  <input type="text" name="name" placeholder="Nome" required>
+  <input type="email" name="email" placeholder="Email" required>
+  <textarea name="message" placeholder="Mensagem"></textarea>
+
+  <button type="submit">Enviar</button>
+</form>
 
 
       <a href="#hero" class="seta-subir">
